# AutoMate

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: lockfile-check.yml
docs/: NEXT_ITERATION_RECOMMENDED.md
scripts/: verify_lockfile.py
src/: main.rs  secondary.rs  three.rs
