[package]
name = "automate"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
zip = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
pdfium-render = "0.8"
pollster = "0.3"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
itertools = "0.14"
